# cancer-classification

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml  setup.sh
cancer_classification/: README.md  git_utils.py  mlflow_utils.py  paths.py
cancer_classification/custom_callbacks/: get_callbacks.py  timer_with_logging_callback.py
cancer_classification/data_modules/: nct_crc_he_100k__data_module.py
cancer_classification/lightning_modules/: __init__.py  base_cancer_classification_lightning_module.py  resnet18_cancer_classification_lightning_module.py
cancer_classification/lightning_modules/custom_models/: single_layer_ff.py
cancer_classification/utils/: git_utils.py  mlflow_utils.py  paths.py
data/: .gitignore  download_data.sh
data/1_raw/: download_data.sh
data/notebooks/: Create DataLoader.ipynb  Investigate Splits.ipynb
data/splits/: test_indices.npy  train_indices.npy  val_indices.npy
experiments/: mflow_test.py  mlflow_test.py  train_and_test.py
experiments/logs/mlruns/0/: meta.yaml
experiments/logs/mlruns/373579139763804927/: meta.yaml
experiments/logs/mlruns/674084094053218021/: meta.yaml
experiments/logs/mlruns/878015117711010535/: meta.yaml
experiments/notebooks/: Elastic Net.ipynb  LitAutoEncoder.ipynb  Plotting and Saving Figures.ipynb  ResNet.ipynb  Understanding ResNet18 Output.ipynb
experiments/scripts/: train_and_test.py
experiments/scripts/elastic_net/: elastic_net.py
experiments/scripts/mnist_classfier/: data_module.py  train_and_test.py
experiments/scripts/resnet/: model.py  train_and_test.py
(+303 files in other folders)
